--- a/4-BOLUM/JquerryTailwindExercise/src/input.css
+++ b/4-BOLUM/JquerryTailwindExercise/src/input.css
@@ -8,3 +8,27 @@
     font-weight: normal;
     font-style: normal;
 }
+
+body {
+    @apply font-schwifty bg-lightPeach pt-5
+}
+
+h1 {
+    @apply text-7xl
+}
+
+h2 {
+    @apply text-6xl
+}
+
+h3 {
+    @apply text-5xl
+}
+
+h4 {
+    @apply text-4xl
+}
+
+h5 {
+    @apply text-3xl
+}
