--- a/4-BOLUM/MVC-002-Tailwind/Views/Home/Index.cshtml
+++ b/4-BOLUM/MVC-002-Tailwind/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="bg-black display-4">Welcome</h1>
-    <h1 class="bg-black display-4">Welcome</h1>
-    <h1 class="bg-black display-4">Welcome</h1>
+    <h1 class="bg-slate-500 display-4">Welcome</h1>
+    <h1 class="bg-yellow-500 display-4">Welcome</h1>
+    <h1 class="bg-pink-500 display-4">Welcome</h1>
+    <h1 class="bg-red-500 display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
