--- a/4-BOLUM/MVC-Rick-And-Morty/Views/Shared/_Layout.cshtml
+++ b/4-BOLUM/MVC-Rick-And-Morty/Views/Shared/_Layout.cshtml
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVC_003__rm_deneme_</title>
-    <link rel="stylesheet" href="~/css/output.css" asp-append-version="true">
+    <title>@ViewData["Title"] - MVC_Rick_And_Morty</title>
+    <link rel="stylesheet" href="/css/styles.css">
+
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MVC_003__rm_deneme_.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/MVC_Rick_And_Morty.styles.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     </main>
 
 
-    <footer>
+    <footer class="border-top footer text-muted">
 
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
