--- a/4-BOLUM/MVC-009(cookie)/Views/Home/Login.cshtml
+++ b/4-BOLUM/MVC-009(cookie)/Views/Home/Login.cshtml
@@ -10,10 +10,10 @@ Name mapping icin farkli yontemler var
 4. Daha once gordugumuz @Html.TextBoxFor ile olusturulabilir.
  *@
 <form method="post" action="/Home/Login">
-    @* @if (Model == null)
+    @if (Model == null)
     {
         <input id="model" type="hidden" value="0">
-    } *@
+    }
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input asp-for="@Model.Email" type="email" class="form-control" id="exampleInputEmail1"
@@ -30,25 +30,24 @@ Name mapping icin farkli yontemler var
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-    window.onload = function () {
+    @* window.onload = function () {
         // Razor'da Model null kontrolü yapılıyor ve JS'ye boolean aktarılıyor.
-    @* var hiddenValue = document.getElementById("model")).value;
+     var hiddenValue = document.getElementById("model")).value;
 
         if (hiddenValue == 0) {
             alert("Incorrect E-Mail Or Password");
         }
     } *@
 
-            // ayni kodun jquerry ile yazilisi
-    @* $(document).ready(function () {
-                var hiddenValue = $("#model").val();
-
-                if (hiddenValue == '0') {
-                    alert("Incorrect E-Mail Or Password")
-                }
-            }) *@
+        // ayni kodun jquerry ile yazilisi
+        $(document).ready(function () {
+            var hiddenValue = $("#model").val();
+            if (hiddenValue == '0') {
+                alert("Incorrect E-Mail Or Password")
+            }
+        })
 
 
 </script>
