--- a/4-BOLUM/MVC-014(Action-Filter)/Views/Home/Index.cshtml
+++ b/4-BOLUM/MVC-014(Action-Filter)/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IndexViewModel
+
+
+@if (!Model.IsCorrrect)
+{
+    <p> @Model.ActionFilterErrorrMessage</p>
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<form action="/Home/Index" method="post">
+    <input type="text" name="Email" placeholder="e-mail">
+    <input type="text" name="Name" placeholder="name">
+    <input type="submit" value="Gonder">
+</form>
