--- a/4-BOLUM/CALISMALAR/MVC-Project1/Views/Student/Edit.cshtml
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/Views/Student/Edit.cshtml
@@ -2,7 +2,7 @@
 
 
 
-<div class="flex flex-col items-center justify-center p-8 rounded-lg shadow-xl bg-navyBlue text-aqua mb-9">
+<div class="addStudent">
     <h2>Add Student</h2>
     <form action="/Student/Add" method="post" class="flex flex-col gap-4 p-4 form">
         <div class="flex gap-4">
@@ -52,7 +52,7 @@
 </div>
 
 
-<div class="flex flex-col items-center justify-center p-8 rounded-lg shadow-xl bg-navyBlue text-aqua mb-9">
+<div class="flex flex-col items-center justify-center p-8 shadow-xl rounded-3xl bg-navyBlue text-aqua mb-9">
     <h2>Remove Student</h2>
     <form action="/Student/Remove" method="post" class="flex flex-col gap-4 p-4 form" onsubmit="clearInputs(event)">
         <div class="flex gap-4">
