--- a/4-BOLUM/CALISMALAR/MVC-Project1/wwwroot/css/input.css
+++ b/4-BOLUM/CALISMALAR/MVC-Project1/wwwroot/css/input.css
@@ -29,3 +29,8 @@ h5 {
 p {
     @apply text-xl
 }
+
+.addStudent
+{
+    @apply flex flex-col items-center justify-center p-8 rounded-lg shadow-xl bg-navyBlue text-aqua mb-9
+}
